# zkemail.rs-ZKVM

./: Cargo.toml  README.md
.github/workflows/: ci.yml
core/: Cargo.toml
core/src/: circuits.rs  crypto.rs  email.rs  regex.rs  structs.rs
helpers/: Cargo.toml
helpers/src/: dkim.rs  generator.rs  lib.rs
profiling/: Cargo.toml  README.md  zkvm_benchmark_results.md
profiling/benches/: comprehensive_zkvm_benchmarks.rs  zkvm_benchmarks.rs  zkvm_benchmarks_new.rs
profiling/risc0/guest/: Cargo.toml
profiling/risc0/host/: Cargo.toml
profiling/risc0/host/methods/: Cargo.toml  guest-list.toml
profiling/risc0/host/methods/src/: lib.rs
profiling/sp1/: README.md  build.bat  build.sh
profiling/sp1/program/: Cargo.toml
profiling/sp1/program/src/: main.rs
profiling/sp1/script/: Cargo.toml
profiling/sp1/script/src/: execute.rs  main.rs
profiling/src/: lib.rs  test_data.rs  zkvm_benchmarks.rs  zkvm_integration.rs  zkvm_profiler.rs
profiling/tests/: dkim_tests.rs  email_parsing_tests.rs  functionality_tests.rs  zkvm_optimization_tests.rs  zkvm_tests.rs
profiling/tests/data/: dkim_public_key.pem  dkim_test_email.eml  sample_email.eml
profiling/tests/test_data/: sample_email.txt  sample_public_key.pem
