[package]
name = "zkemail-core"
version = "0.1.0"
edition = "2021"
description = "Core functionality for the zkemail crate"

[features]
default = []
sp1 = ["sp1-sdk"]
risc0 = ["risc0-zkvm"]

[dependencies]
alloy-sol-types = { workspace = true }
borsh = { workspace = true }
cfdkim = { git = "https://github.com/risc0-labs/dkim", default-features = false }
mailparse = { workspace = true }
regex-automata = { workspace = true }
rsa = { workspace = true }
serde = { workspace = true }
sha2 = { workspace = true }
slog = { workspace = true }

# ZKVM-specific dependencies
risc0-zkvm = { workspace = true, optional = true }
sp1-sdk = { workspace = true, optional = true }

[dev-dependencies]
criterion = { workspace = true }
dhat = { workspace = true }
