[package]
name = "zkemail-helpers"
version = "0.1.0"
edition = "2021"
description = "ZKVM-specific helper functions for zkemail"

[dependencies]
# ZKVM-compatible dependencies only
alloy-sol-types = { workspace = true }
base64 = { workspace = true }
mailparse = { workspace = true }
rsa = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
slog = { workspace = true }
regex-automata = { workspace = true }
zkemail-core = { path = "../core" }