[workspace]

[package]
name = "risc0-guest"
version = "0.1.0"
edition = "2021"

[dependencies]
risc0-zkvm = { version = "1.0", default-features = false, features = ["std"] }
serde = { version = "1.0", features = ["derive"] }
borsh = { version = "1.0", features = ["derive"] }
zkemail-core = { path = "../../../core", features = ["risc0"] }

[[bin]]
name = "email_verification"
path = "src/bin/email_verification.rs"
